# docs/swagger.json
@@ -67,14 +67,21 @@
                     }
                 },
                 "unordered": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "string"
-                    },
-                    "example": {
-                        "1": "а",
-                        "2": "а"
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Unordered"
                     }
+                }
+            }
+        },
+        "models.Unordered": {
+            "type": "object",
+            "properties": {
+                "l": {
+                    "type": "string"
+                },
+                "p": {
+                    "type": "integer"
                 }
             }
         }
