# internal/models/solver.go
@@ -1,8 +1,13 @@
 package models
 
+type Unordered struct {
+	P int
+	L string
+}
+
 type SolverRequest struct {
 	Ordered   map[int]string `json:"ordered" example:"3:о,5:е"`
-	Unordered map[int]string `json:"unordered" example:"1:а,2:а"`
+	Unordered []Unordered    `json:"unordered"`
 	Absent    []string       `json:"absent" example:"в,г"`
 }
 
